--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
+################ custum ################
+*.cmd
 
+
+################ gitignore.io ################
 # Created by https://www.toptal.com/developers/gitignore/api/python,macos,windows,sublimetext,visualstudiocode,venv,virtualenv
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,macos,windows,sublimetext,visualstudiocode,venv,virtualenv
 
