--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ################ custum ################
 *.cmd
 .idea/*
-
+migration/
 
 ################ gitignore.io ################
 # Created by https://www.toptal.com/developers/gitignore/api/python,macos,windows,sublimetext,visualstudiocode,venv,virtualenv
