--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/python,macos,windows,sublimetext,visualstudiocode,venv,virtualenv
+TeamProject/config.py
