--- a/TeamProject/requirements.txt
+++ b/TeamProject/requirements.txt
@@ -1,19 +1,34 @@
 alembic==1.4.2
+appdirs==1.4.4
+astroid==2.4.2
+black==20.8b1
 click==7.1.2
+colorama==0.4.4
 Flask==1.1.2
 Flask-JWT-Extended==3.24.1
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.4
+isort==5.6.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
+lazy-object-proxy==1.4.3
 Mako==1.1.3
 MarkupSafe==1.1.1
+mccabe==0.6.1
+mypy-extensions==0.4.3
 mysqlclient==2.0.1
+pathspec==0.8.0
 PyJWT==1.7.1
+pylint==2.6.0
 python-dateutil==2.8.1
 python-editor==1.0.4
+regex==2020.10.28
 six==1.15.0
 SQLAlchemy==1.3.19
+toml==0.10.2
+typed-ast==1.4.1
 typing==3.7.4.3
+typing-extensions==3.7.4.3
 utils==1.0.1
 Werkzeug==1.0.1
+wrapt==1.12.1
