--- a/.gitignore
+++ b/.gitignore
@@ -260,3 +260,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/python,macos,windows,sublimetext,visualstudiocode,venv,virtualenv
+TeamProject/.vscode/settings.json
