--- a/.gitignore
+++ b/.gitignore
@@ -261,3 +261,4 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/python,macos,windows,sublimetext,visualstudiocode,venv,virtualenv
 TeamProject/.vscode/settings.json
+TeamProject/.vscode/tasks.json
