--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,5 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/python,macos,windows,sublimetext,visualstudiocode,venv,virtualenv
 TeamProject/.vscode/settings.json
 TeamProject/.vscode/tasks.json
+.vscode/tasks.json
+.vscode/settings.json
