--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/python,macos,windows,sublimetext,visualstudiocode,venv,virtualenv
+.vscode/tasks.json
+.vscode/settings.json
